--- a/content/blog/fi/lyyli-funding-announcement.mdx
+++ b/content/blog/fi/lyyli-funding-announcement.mdx
@@ -14,21 +14,31 @@ imageAlt: "Expion ja South Savo Growth Fund (Redstonen hallinnoima) liittyvät L
 
 Viestintäassistentti **Lyyli.ai** on saanut merkittävän pääomasijoituksen kasvun vauhdittamiseksi. **Expion** ja **Redstonen** hallinnoima South Savo Growth Fund tukee yritystä, joka automatisoi ja virtaviivaistaa yritysten sisäistä ja ulkoista viestintää älykkäällä teknologialla.
 
+---
+
 ## Tekoälyavusteinen viestintäassistentti mullistaa yritysten viestinnän
 
 **Lyyli.ai** muuttaa sitä, miten yritykset luovat ja hallinnoivat sisältöä. Tekoälyavusteinen viestintäassistentti automatisoi rutiinitehtäviä, parantaa sisällön laatua ja varmistaa yhtenäisen viestinnän kaikilla kanavilla. Tekoälyagentti oppii yrityksen brändin, arvot ja viestintätyylin, tuottaen sitten yhtenäistä, korkealaatuista sisältöä kaikille kanaville – LinkedInistä sisäisiin uutiskirjeisiin.
 
 Yrityksen toimitusjohtaja ja perustaja on **Mikko Oksanen**, kun taas toinen perustaja **Veikko Laitinen** toimii yrityksen teknologiajohtajana.
 
+---
+
+## Sijoittajien luottamus asiantuntijaorganisaatioiden viestintähaasteisiin
+
 "Mikko ymmärtää hyvin asiantuntijaorganisaatioiden viestintähaasteet, ja Veikon asiantuntemus ja laaja ymmärrys tekoälyteknologioista vakuuttivat meidät," sanoo **Sannamari Nykänen**, Expion Oyn toimitusjohtaja, joka myös liittyy yrityksen hallitukseen sijoituksen myötä. "Olemme työskennelleet Mikon kanssa useita vuosia, ja on hienoa, että Expionin ensimmäinen pääomasijoitus menee juuri **Lyyli.ai:n** kehitystyöhön."
 
 Rahoituksen myötä yritys viimeistelee tuotteensa markkinavalmiiksi ja aloittaa aktiivisen myynnin Suomessa 50-1000 henkilön asiantuntija- ja projektiorganisaatioille, joiden viestintähaasteet ovat suurimmat.
+
+---
 
 ## Tekoäly vapauttaa viestintäammattilaiset luovaan työhön
 
 "Sijoittajien tuki on ratkaisevan tärkeää startupin varhaisvaiheessa – se tuo mukanaan paitsi pääomaa, myös kokemusta ja verkostoja, ilman joita eteneminen olisi huomattavasti hitaampaa. Nyt voimme todella näyttää, miten tekoäly voi vapauttaa viestintäammattilaiset luovaan työhön," toteaa Mikko, Lyyli AI Oyn toimitusjohtaja.
 
 "Teknisestä näkökulmasta Lyyli.ai on minulle täydellinen projekti, saan yhdistää kaikki asiantuntemusalueet, joita olen kerännyt vuosien varrella, samalla kun jatkan uusien asioiden oppimista," jatkaa teknologiajohtaja Veikko Laitinen. "Tekoälyn mahdollisuudet viestinnässä ovat valtavat, ja teknisemme ratkaisumme on rakennettu skaalautuvaksi alusta alkaen. Kun näet, miten **Lyyli** oppii yrityksen viestintätyylin ja alkaa tuottaa aidosti korkealaatuista sisältöä, ymmärrät, että tämä on teknologia, joka todella muuttaa sitä, miten työtä tehdään tiimeissä. On hienoa saada sijoittajien tukea ja luottamus projektiin. Se antaa meille mahdollisuuden keskittyä täysin tuotekehitykseen ja tuo meidät markkinoille nopeammin."
+
+---
 
 ## Hallitukseen laaja-alaista osaamista
 
