--- a/content/blog/fi/lyyli-funding-announcement.mdx
+++ b/content/blog/fi/lyyli-funding-announcement.mdx
@@ -14,15 +14,11 @@ imageAlt: "Expion ja South Savo Growth Fund (Redstonen hallinnoima) liittyvät L
 
 Viestintäassistentti **Lyyli.ai** on saanut merkittävän pääomasijoituksen kasvun vauhdittamiseksi. **Expion** ja **Redstonen** hallinnoima South Savo Growth Fund tukee yritystä, joka automatisoi ja virtaviivaistaa yritysten sisäistä ja ulkoista viestintää älykkäällä teknologialla.
 
----
-
 ## Tekoälyavusteinen viestintäassistentti mullistaa yritysten viestinnän
 
 **Lyyli.ai** muuttaa sitä, miten yritykset luovat ja hallinnoivat sisältöä. Tekoälyavusteinen viestintäassistentti automatisoi rutiinitehtäviä, parantaa sisällön laatua ja varmistaa yhtenäisen viestinnän kaikilla kanavilla. Tekoälyagentti oppii yrityksen brändin, arvot ja viestintätyylin, tuottaen sitten yhtenäistä, korkealaatuista sisältöä kaikille kanaville – LinkedInistä sisäisiin uutiskirjeisiin.
 
 Yrityksen toimitusjohtaja ja perustaja on **Mikko Oksanen**, kun taas toinen perustaja **Veikko Laitinen** toimii yrityksen teknologiajohtajana.
-
----
 
 ## Sijoittajien luottamus asiantuntijaorganisaatioiden viestintähaasteisiin
 
@@ -30,15 +26,11 @@ Yrityksen toimitusjohtaja ja perustaja on **Mikko Oksanen**, kun taas toinen per
 
 Rahoituksen myötä yritys viimeistelee tuotteensa markkinavalmiiksi ja aloittaa aktiivisen myynnin Suomessa 50-1000 henkilön asiantuntija- ja projektiorganisaatioille, joiden viestintähaasteet ovat suurimmat.
 
----
-
 ## Tekoäly vapauttaa viestintäammattilaiset luovaan työhön
 
 "Sijoittajien tuki on ratkaisevan tärkeää startupin varhaisvaiheessa – se tuo mukanaan paitsi pääomaa, myös kokemusta ja verkostoja, ilman joita eteneminen olisi huomattavasti hitaampaa. Nyt voimme todella näyttää, miten tekoäly voi vapauttaa viestintäammattilaiset luovaan työhön," toteaa Mikko, Lyyli AI Oyn toimitusjohtaja.
 
 "Teknisestä näkökulmasta Lyyli.ai on minulle täydellinen projekti, saan yhdistää kaikki asiantuntemusalueet, joita olen kerännyt vuosien varrella, samalla kun jatkan uusien asioiden oppimista," jatkaa teknologiajohtaja Veikko Laitinen. "Tekoälyn mahdollisuudet viestinnässä ovat valtavat, ja teknisemme ratkaisumme on rakennettu skaalautuvaksi alusta alkaen. Kun näet, miten **Lyyli** oppii yrityksen viestintätyylin ja alkaa tuottaa aidosti korkealaatuista sisältöä, ymmärrät, että tämä on teknologia, joka todella muuttaa sitä, miten työtä tehdään tiimeissä. On hienoa saada sijoittajien tukea ja luottamus projektiin. Se antaa meille mahdollisuuden keskittyä täysin tuotekehitykseen ja tuo meidät markkinoille nopeammin."
-
----
 
 ## Hallitukseen laaja-alaista osaamista
 
@@ -50,27 +42,23 @@ Lisäksi KHT **Teemu Laitinen** (Kuittiniilo Oyn perustaja) liittyy hallituksen 
 
 "Olemme kiitollisia sijoittajiemme tuesta ja odotamme innolla tulevaa yhteistyötä heidän kanssaan. Nyt on aika näyttää, miten suomalainen tekoälyosaaminen suoriutuu globaalilla viestintämarkkinalla," päätää Oksanen.
 
----
-
 ## Sijoittajista
 
 <div class="bg-gray-50 border-l-4 border-forest p-6 my-8 rounded-r-lg">
 
-### Expion
+### **Expion**
 
 **Expion** on uusi suomalainen perheyritys, joka tarjoaa kasvupalveluita ja rahoitusmahdollisuuksia. Yritys keskittyy tukemaan pieniä ja keskisuuria yrityksiä kasvun ja kansainvälistymisen tiellä, tarjoamalla yrityksille sekä rahoitusta että asiantuntijapalveluita, joita olemme itse kokeneet tarpeellisiksi kasvun ja liiketoiminnan päivittäisessä elämässä.
 
 [www.expion.fi](https://www.expion.fi)
 
-### Redstone
+### **Redstone**
 
 **Redstone** on eurooppalainen pääomasijoitusyhtiö. Hallinnoimme useita VC-rahastoja, jotka keskittyvät varhaisvaiheen eurooppalaisiin yrityksiin sellaisilla aloilla kuin fintech, terveydenhuolto, teollinen deep tech, kiinteistöteknologia, energia ja ilmastoteknologia. Suurimmat toimistomme sijaitsevat Berliinissä, Münchenissä, Zürichissä ja Helsingissä, ja rahastomme salkut sisältävät yli 180 yritystä.
 
 [www.redstone.vc](https://www.redstone.vc)
 
 </div>
-
----
 
 ## Kysy Mikolta lisää
 
